--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -3,11 +3,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jupyterlab=3.0.12
-  - seaborn=0.11.1
-  - pandas=1.2.3
-  - pip=20.3.3
-  - pandas-profiling=2.11.0
-  - pyarrow=2.0
+  - python=3.9
+  - jupyterlab=3.5.2
+  - seaborn=0.12.1
+  - pandas=1.5.2
+  - pip=22.3.1
+  - pandas-profiling=2.13.0
+  - pyarrow=10.0.1
   - pip:
-      - wandb==0.10.31
+      - wandb==0.13.7
